fixed background image in header to be covered and not repeat

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,5 +1,8 @@
 header{
     background-image: url(../assets/toronto-cn-tower.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .main{
     height: 100vh;
