--- a/styles/sass/partials/_projectPage.scss
+++ b/styles/sass/partials/_projectPage.scss
@@ -45,7 +45,11 @@
     position: relative;
 }
 
-
+.projectPic{
+    img{
+        object-fit: cover;
+    }
+}
 .overlay{
     background-color: black;
     position: absolute;
