--- a/styles/styles.css
+++ b/styles/styles.css
@@ -376,6 +376,7 @@ span {
   .aboutFlexParent .imageParent {
     margin: 50px 0;
     width: 80%;
+    border: 1px solid red;
     position: static;
   }
   .aboutFlexParent .imageParent img {
@@ -384,7 +385,7 @@ span {
   .aboutFlexParent .imageParent .image1,
 .aboutFlexParent .imageParent .image2,
 .aboutFlexParent .imageParent .image3 {
-    border-bottom: 20px solid white;
+    border-bottom: 20px solid goldenrod;
   }
   .techSkillsContainer .techSkillsChild {
     width: 25%;
@@ -480,6 +481,17 @@ span {
   .aboutFlexParent .imageParent img:hover {
     -webkit-transform: scale(2);
             transform: scale(2);
+  }
+  .hobbies .hobbiesChild {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .techSkillsContainer .techSkillsChild {
     width: 50%;
@@ -600,6 +612,9 @@ nav .slideOut a {
 
 header {
   background-image: url(../assets/toronto-cn-tower.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .main {
@@ -921,6 +936,11 @@ h4 {
 
 .projectItem {
   position: relative;
+}
+
+.projectPic img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .overlay {
